使用es6和gulp的版本

--- a/package.json
+++ b/package.json
@@ -2,10 +2,10 @@
   "name": "restify-boilerplate",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "app.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start":"node app.js"
+    "start":"node dist/app.js"
   },
   "repository": {
     "type": "git",
@@ -18,6 +18,13 @@
   },
   "homepage": "https://github.com/MarshalW/restify-boilerplate#readme",
   "dependencies": {
-    "restify": "^4.0.4"
+    "restify": "latest"
+  },
+  "devDependencies": {
+    "babel-polyfill": "^6.5.0",
+    "babel-preset-es2015": "^6.5.0",
+    "gulp": "^3.9.1",
+    "gulp-babel": "^6.1.2",
+    "gulp-sourcemaps": "^1.6.0"
   }
 }
