--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "app.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start":"node dist/app.js"
+    "start":"node app.js"
   },
   "repository": {
     "type": "git",
@@ -21,10 +21,5 @@
     "restify": "latest"
   },
   "devDependencies": {
-    "babel-polyfill": "^6.5.0",
-    "babel-preset-es2015": "^6.5.0",
-    "gulp": "^3.9.1",
-    "gulp-babel": "^6.1.2",
-    "gulp-sourcemaps": "^1.6.0"
   }
 }
