重构后的第一个版本：一个最简单的restify helloworld

--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "app.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start":"node app.js"
+    "start": "node app.js"
   },
   "repository": {
     "type": "git",
@@ -18,8 +18,8 @@
   },
   "homepage": "https://github.com/MarshalW/restify-boilerplate#readme",
   "dependencies": {
-    "restify": "latest"
+    "nconf": "^0.8.4",
+    "restify": "^4.0.4"
   },
-  "devDependencies": {
-  }
+  "devDependencies": {}
 }
