初步将acl加上了

--- a/config/global.product.json.template
+++ b/config/global.product.json.template
@@ -11,7 +11,7 @@
     "Logging": {
         "Dir": "/logs"
     },
-    "Auth": {
+    "Security": {
         "SecretSigningKey": "are you ok?"
     }
 }
