--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   },
   "homepage": "https://github.com/MarshalW/restify-boilerplate#readme",
   "dependencies": {
+    "acl": "^0.4.9",
     "jsonwebtoken": "^7.0.0",
     "moment": "^2.13.0",
     "nconf": "^0.8.4",
